force-app/main/default/objects/CheckIn_CMV__Visit_Compliance__mdt/CheckIn_CMV__Visit_Compliance__mdt.object-meta.xml
<CustomObject>
    <label>Visit Compliance</label>
    <pluralLabel>Visit Compliances</pluralLabel>
</CustomObject>