force-app/main/default/objects/CheckIn_CMV__Visit_Compliance__mdt/fields/CheckIn_CMV__Allow_Non_compliant_Visits__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_CMV__Allow_Non_compliant_Visits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Non-compliant Visits</label>
    <type>Checkbox</type>
</CustomField>