force-app/main/default/objects/CheckIn_CMV__Visit_Compliance__mdt/fields/CheckIn_CMV__Max_Distance__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_CMV__Max_Distance__c</fullName>
    <inlineHelpText>In Kilometers</inlineHelpText>
    <label>Max Distance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>