force-app/main/default/objects/CheckIn_CMV__Visit_Compliance__mdt/fields/CheckIn_CMV__Navigate_to_Visit_on_Check_In__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_CMV__Navigate_to_Visit_on_Check_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Navigate to Visit on Check In</label>
    <type>Checkbox</type>
</CustomField>